# Vocabular_new

./: .gitignore  CMakeLists.txt  README.md  uml diagram.xmi  задание про аудио
android/: AndroidManifest.xml  build.gradle
src/: backend.cpp  backend.h  current_learning.cpp  current_learning.h  currentlearning.cpp  currentlearning.h  customlabel.cpp  customlabel.h  googledrivemanager.cpp  googledrivemanager.h  hovereventfilter.cpp  hovereventfilter.h  learnui.cpp  learnui.h  learnui.ui  main.cpp  main_vocabulary.cpp  main_vocabulary.h  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainvocabulary.cpp  mainvocabulary.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiselectlabel.cpp  multiselectlabel.h  multiselecttextedit.cpp  multiselecttextedit.h  subtitleextractor.cpp  subtitleextractor.h  subtitlemanager.cpp  subtitlemanager.h  subtitleselectiondialog.cpp  subtitleselectiondialog.h  translator.cpp  translator.h  utilities.h  videoplayer.cpp  (+7 more)
